--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,17 +4,17 @@
   </div>
   <div class="p-2 m-2">
     <label>
-      <input type="radio" name="choice" value="option1" checked />
+      <input type="radio" name="choice" value="expense" checked />
       Expense
     </label>
 
     <label>
-      <input type="radio" name="choice" value="option2" />
+      <input type="radio" name="choice" value="income" />
       Income
     </label>
   </div>
   <div class="flex flex-col justify-center border-2 items-center p-2">
-    <div>
+    <div class="m-2 p-2">
       <input
         type="number"
         placeholder="Amount"
