--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="border-2 flex flex-col items-center">
   <div class="text-center">
-    <header class="font-bold">Expense Tracker</header>
+    <header class="font-bold border-2 p-2 m-2 text-5xl">Expense Tracker</header>
   </div>
-  <div class="p-2 m-2">
+  <!-- <div class="p-2 m-2">
     <label>
       <input type="radio" name="choice" value="expense" checked />
       Expense
@@ -12,9 +12,12 @@
       <input type="radio" name="choice" value="income" />
       Income
     </label>
-  </div>
-  <div class="flex flex-col justify-center border-2 items-center p-2">
-    <div class="m-2 p-2">
+  </div> -->
+  <form
+    method="submit"
+    class="flex flex-col justify-center border-2 items-center p-2"
+  >
+    <div class="m-2 p-2 border-2">
       <input
         type="number"
         placeholder="Amount"
@@ -23,32 +26,31 @@
         min="1"
         [(ngModel)]="addExpAmount"
       />
+    </div>
+    <div class="p-2 m-2 border-2 flex items-center justify-center">
+      <h1>Type:</h1>
+      <select [(ngModel)]="selectedType">
+        <option *ngFor="let type of types" [value]="type">
+          {{ type }}
+        </option>
+      </select>
+    </div>
+    <button
+      *ngIf="addExpAmount == null || addExpAmount == 0; else EnabledBtn"
+      disabled
+      class="bg-gray-400 p-2 rounded-2xl text-white my-2"
+    >
+      Done
+    </button>
+    <ng-template #EnabledBtn>
       <button
-        *ngIf="addExpAmount == null || addExpAmount == 0; else EnabledBtn"
         type="button"
-        disabled
-        class="bg-gray-400 p-2 rounded-2xl text-white"
+        (click)="addExp()"
+        class="bg-green-950 p-2 rounded-2xl text-white my-2"
       >
         Done
       </button>
-      <ng-template #EnabledBtn>
-        <button
-          type="button"
-          (click)="addExpense()"
-          class="bg-green-950 p-2 rounded-2xl text-white"
-        >
-          Done
-        </button>
-      </ng-template>
-    </div>
-    <div class="border-2">
-      <label for="myDropdown" class="mr-5">Type:</label>
-      <select id="myDropdown">
-        <option value="food">Food</option>
-        <option value="transportation">Transportation</option>
-        <option value="other">Other</option>
-      </select>
-    </div>
+    </ng-template>
     <!-- <div class="flex flex-col border-2">
       <label for="description">Description:</label>
       <textarea
@@ -58,23 +60,77 @@
         cols="50"
       ></textarea>
     </div> -->
-  </div>
+  </form>
   <div class="border-2 flex flex-row justify-evenly w-full">
     <div class="border-2 flex flex-col items-center">
       <p class="p-2 m-2 text-3xl">Expenses</p>
-      <div *ngFor="let exp of expenseArr" class="p-2 m-2">
-        <p>Food: {{ exp.amount }}</p>
+      <div
+        *ngFor="let exp of expenseArr"
+        class="p-2 m-2 flex justify-center items-center"
+      >
+        <p>{{ exp.type }}: {{ exp.amount }}</p>
+        <button
+          class="border-2 ml-2 px-2"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+          type="button"
+          (click)="call(exp)"
+        >
+          e
+        </button>
+        <button class="border-2 ml-1 px-2" (click)="deleteExp(exp)">x</button>
+      </div>
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Edit Task</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div class="input-group p-4">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Enter task "
+                  name="task"
+                  [(ngModel)]="editExpAmount"
+                />
+                <button
+                  class="btn btn-outline-success"
+                  type="button"
+                  data-bs-dismiss="modal"
+                  (click)="editExp()"
+                >
+                  Update
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <p class="p-2 m-2 text-3xl">Total</p>
       <p>{{ expTotal }}</p>
     </div>
-    <div class="border-2 flex flex-col items-center">
+    <!-- <div class="border-2 flex flex-col items-center">
       <p class="p-2 m-2 text-3xl">Income</p>
       <div *ngFor="let exp of expenseArr" class="p-2 m-2">
         <p></p>
       </div>
       <p class="p-2 m-2 text-3xl">Total</p>
       <p></p>
-    </div>
+    </div> -->
   </div>
 </div>
+<h1>Selected: {{selectedType}} </h1>
