--- a/src/app/pie-chart/pie-chart.component.html
+++ b/src/app/pie-chart/pie-chart.component.html
@@ -6,9 +6,6 @@
   [plugins]="pieChartPlugins"
   [legend]="pieChartLegend">
 </canvas>
-<div *ngFor="let exp of expenseArr">
-    <p>{{exp.amount}} {{exp.type}}</p>
-</div>
-<p>{{food}}</p>
-<p>{{transportation}}</p>
-<p>{{others}}</p>
+<p>Food {{food}}</p>
+<p>Transportation {{transportation}}</p>
+<p>Others {{others}}</p>
